# dsync

./: .gitignore  .justfile  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  benchmark.sh  build.rs  local_dsync_vs_rsync.sh  local_pxs_vs_rsync.sh  remote_dsync_vs_rsync.sh  remote_pxs_vs_rsync.sh  sync.sh
.github/workflows/: build.yml  coverage.yml  deploy.yml  test.yml
docs/: design.md
docs/diagrams/: delta-sync.mmd  direct-tcp.mmd  local-sync.mmd  ssh-flow.mmd
src/: lib.rs
src/cli/: start.rs  telemetry.rs
src/cli/actions/: mod.rs  run.rs
src/cli/commands/: mod.rs
src/cli/dispatch/: mod.rs
src/dsync/: mod.rs  net.rs  sync.rs  tools.rs
src/pxs/: net.rs  sync.rs  tools.rs
src/pxs/net/: codec.rs  mod.rs  path.rs  protocol.rs  receiver.rs  sender.rs  shared.rs  ssh.rs  tasks.rs
src/pxs/sync/: delete.rs  dir.rs  file.rs  meta.rs  mod.rs
src/pxs/tools/: compare.rs  mod.rs  runtime.rs  tests.rs
tests/: cli_test.rs  net_test.rs  sync_test.rs
tests/podman/: Containerfile  test_ssh_pull.sh  test_ssh_pull_resume.sh  test_ssh_push.sh  test_tcp_directory_resume.sh  test_tcp_pull.sh  test_tcp_push.sh
