[package]
name = "dsync"
version = "0.1.0"
edition = "2024"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "High-performance, concurrent synchronization tool for massive data transfers."
readme = "README.md"
repository = "https://github.com/nbari/dsync"
keywords = ["sync", "performance", "network", "parallel", "postgres"]
categories = ["command-line-utilities", "network-programming"]
license = "BSD-3-Clause"

[lints.rust]
warnings = "deny"

[lints.clippy]
# Allow unstable/opinionated lints (lower priority so individual lints can override)
nursery = { level = "allow", priority = -1 }

# Enforce pedantic lints
pedantic = "deny"

# Core lint groups
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"

# Safety-critical lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"

# Performance + memory reliability
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"

[dependencies]
anyhow = "1"
blake3 = "1.8.3"
bytes = "1.11.1"
chrono = "0.4"
clap = { version = "4.5", features = ["env"] }
filetime = "0.2.27"
futures-util = "0.3.31"
ignore = "0.4.25"
indicatif = "0.18.3"
nix = { version = "0.31.1", features = ["fs", "user"] }
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "tls"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49", features = ["full", "io-util", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
twox-hash = "2.1.2"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/dsync", dest = "/usr/local/bin/dsync", mode = "0755" },
]

[package.metadata.deb]
assets = [
  ["target/release/dsync", "/usr/local/bin/dsync", "755"],
]
depends = ""

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
tempfile = "3.25.0"
